# python-pip-error-demo

./: LICENSE  README.md
mylib/: pyproject.toml
mylib/mylib/: example.py
myotherlib/: pyproject.toml
myotherlib/myotherlib/: example.py
mytestlib/: pyproject.toml
