[project]
name = "myotherlib"
version = "1.2.3"
description = "My Other library - a generic, non-PyPI published library depending on a similar library"
dependencies = [
    "mytestlib"
]

[project.optional-dependencies]
dev = [
    "mytestlib @ git+https://github.com/m1cr0man/python-pip-error-demo.git@test#subdirectory=mytestlib"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["myotherlib", "myotherlib.*"]
