[project]
name = "mytestlib"
version = "1.2.3"
description = "My Test library - a generic, non-PyPI published library"
dependencies = [
    "aiohttp"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mytestlib", "mytestlib.*"]
